--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="PCLStorage" version="1.0.2" targetFramework="monoandroid71" />
+  <package id="Plugin.AudioRecorder" version="0.8.0" targetFramework="monoandroid71" />
   <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid71" />
   <package id="Plugin.Permissions" version="2.1.0" targetFramework="monoandroid71" />
+  <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Annotations" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Compat" version="25.4.0.2" targetFramework="monoandroid71" />
