--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Com.Airbnb.Android.Lottie" version="2.2.5.0" targetFramework="monoandroid71" />
+  <package id="Com.Airbnb.Xamarin.Forms.Lottie" version="2.3.4" targetFramework="monoandroid71" />
+  <package id="FormsToolkit" version="1.1.18" targetFramework="monoandroid71" />
   <package id="PCLStorage" version="1.0.2" targetFramework="monoandroid71" />
   <package id="Plugin.AudioRecorder" version="0.8.0" targetFramework="monoandroid71" />
   <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid71" />
