--- a/VoicePay/VoicePay.csproj
+++ b/VoicePay/VoicePay.csproj
@@ -29,21 +29,41 @@
   </PropertyGroup>
   <ItemGroup>
     <EmbeddedResource Include="App.xaml" />
-    <EmbeddedResource Include="VoicePayPage.xaml" />
+    <EmbeddedResource Include="Views\Enrollment\WelcomePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Enrollment\SelectPhrasePage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Enrollment\AudioRecordingPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="VoicePayPage.xaml.cs">
-      <DependentUpon>VoicePayPage.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\Interfaces\IAudioRecorder.cs" />
-    <Compile Include="ViewModel\BaseViewModel.cs" />
-    <Compile Include="ViewModel\AudioRecorderViewModel.cs" />
+    <Compile Include="ViewModels\BaseViewModel.cs" />
     <Compile Include="Constants\Keys.cs" />
     <Compile Include="Helpers\Settings.cs" />
+    <Compile Include="Views\Enrollment\WelcomePage.xaml.cs">
+      <DependentUpon>WelcomePage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ViewModels\Enrollment\WelcomeViewModel.cs" />
+    <Compile Include="Views\Enrollment\SelectPhrasePage.xaml.cs">
+      <DependentUpon>SelectPhrasePage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ViewModels\Enrollment\SelectPhraseViewModel.cs" />
+    <Compile Include="Services\VerificationService.cs" />
+    <Compile Include="Views\Enrollment\AudioRecordingPage.xaml.cs">
+      <DependentUpon>AudioRecordingPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ViewModels\Enrollment\AudioRecordingViewModel.cs" />
+    <Compile Include="Helpers\EnrollmentProcess.cs" />
+    <Compile Include="Services\Interfaces\IBeepPlayer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core">
@@ -76,6 +96,15 @@
     <Reference Include="Plugin.Settings">
       <HintPath>..\packages\Xam.Plugins.Settings.3.1.1\lib\netstandard1.0\Plugin.Settings.dll</HintPath>
     </Reference>
+    <Reference Include="Lottie.Forms">
+      <HintPath>..\packages\Com.Airbnb.Xamarin.Forms.Lottie.2.3.4\lib\portable-net45+wp8+win+wpa81+dnxcore50\Lottie.Forms.dll</HintPath>
+    </Reference>
+    <Reference Include="MvvmHelpers">
+      <HintPath>..\packages\Refractored.MvvmHelpers.1.3.0\lib\netstandard1.0\MvvmHelpers.dll</HintPath>
+    </Reference>
+    <Reference Include="FormsToolkit">
+      <HintPath>..\packages\FormsToolkit.1.1.18\lib\portable-net45+wp8+win8+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\FormsToolkit.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -83,8 +112,11 @@
   <ItemGroup>
     <Folder Include="Services\" />
     <Folder Include="Services\Interfaces\" />
-    <Folder Include="ViewModel\" />
+    <Folder Include="ViewModels\" />
     <Folder Include="Constants\" />
+    <Folder Include="Views\" />
+    <Folder Include="Views\Enrollment\" />
+    <Folder Include="ViewModels\Enrollment\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SpeakerRecognitionAPI\SpeakerRecognitionAPI.csproj">
