--- a/Droid/VoicePay.Droid.csproj
+++ b/Droid/VoicePay.Droid.csproj
@@ -192,6 +192,9 @@
     <AndroidAsset Include="Assets\loading.json" />
     <AndroidAsset Include="Assets\aispeech_mic.json" />
     <AndroidAsset Include="Assets\loading_mat.json" />
+    <AndroidAsset Include="Assets\completed.json" />
+    <AndroidAsset Include="Assets\correct.json" />
+    <AndroidAsset Include="Assets\crying.json" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Android.Support.Compat.25.4.0.2\build\MonoAndroid70\Xamarin.Android.Support.Compat.targets" Condition="Exists('..\packages\Xamarin.Android.Support.Compat.25.4.0.2\build\MonoAndroid70\Xamarin.Android.Support.Compat.targets')" />
