--- a/iOS/VoicePay.iOS.csproj
+++ b/iOS/VoicePay.iOS.csproj
@@ -158,6 +158,11 @@
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="loading.json" />
+    <BundleResource Include="aispeech_mic.json" />
+    <BundleResource Include="completed.json" />
+    <BundleResource Include="correct.json" />
+    <BundleResource Include="crying.json" />
+    <BundleResource Include="loading_mat.json" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.4.0.280\build\netstandard1.0\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.4.0.280\build\netstandard1.0\Xamarin.Forms.targets')" />
