--- a/VoicePay/VoicePay.csproj
+++ b/VoicePay/VoicePay.csproj
@@ -52,6 +52,22 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Include="Views\Store\CategoriesPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Store\ItemListPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Store\ProductReviewPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Store\CartReviewPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.xaml.cs">
@@ -80,13 +96,37 @@
       <DependentUpon>AudioVerifyPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\Enrollment\AudioVerifyViewModel.cs" />
-    <Compile Include="ViewModels\AudioRecordingBaseViewModel.cs" />
     <Compile Include="Views\Enrollment\IncorrectResultPage.xaml.cs">
       <DependentUpon>IncorrectResultPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Enrollment\CorrectResultPage.xaml.cs">
       <DependentUpon>CorrectResultPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Services\CategoriesService.cs" />
+    <Compile Include="Models\Category.cs" />
+    <Compile Include="Models\Item.cs" />
+    <Compile Include="Services\ItemsService.cs" />
+    <Compile Include="ViewModels\Enrollment\AudioRecordingBaseViewModel.cs" />
+    <Compile Include="Views\Store\CategoriesPage.xaml.cs">
+      <DependentUpon>CategoriesPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ViewModels\Store\CategoriesViewModel.cs" />
+    <Compile Include="Services\Interfaces\ICategoriesService.cs" />
+    <Compile Include="Views\Store\ItemListPage.xaml.cs">
+      <DependentUpon>ItemListPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ViewModels\Store\ItemListViewModel.cs" />
+    <Compile Include="Services\Interfaces\IItemsService.cs" />
+    <Compile Include="Views\Store\ProductReviewPage.xaml.cs">
+      <DependentUpon>ProductReviewPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ViewModels\Store\ProductReviewViewModel.cs" />
+    <Compile Include="Helpers\Cart.cs" />
+    <Compile Include="Models\CartItem.cs" />
+    <Compile Include="Views\Store\CartReviewPage.xaml.cs">
+      <DependentUpon>CartReviewPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ViewModels\Store\CartReviewViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core">
@@ -128,6 +168,9 @@
     <Reference Include="FormsToolkit">
       <HintPath>..\packages\FormsToolkit.1.1.18\lib\portable-net45+wp8+win8+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\FormsToolkit.dll</HintPath>
     </Reference>
+    <Reference Include="DLToolkit.Forms.Controls.FlowListView">
+      <HintPath>..\packages\DLToolkit.Forms.Controls.FlowListView.2.0.9\lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+netstandard1.0\DLToolkit.Forms.Controls.FlowListView.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -140,6 +183,10 @@
     <Folder Include="Views\" />
     <Folder Include="Views\Enrollment\" />
     <Folder Include="ViewModels\Enrollment\" />
+    <Folder Include="Views\Store\" />
+    <Folder Include="ViewModels\Store\" />
+    <Folder Include="Data\" />
+    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SpeakerRecognitionAPI\SpeakerRecognitionAPI.csproj">
