--- a/VoicePay/packages.config
+++ b/VoicePay/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Com.Airbnb.Xamarin.Forms.Lottie" version="2.3.4" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="DLToolkit.Forms.Controls.FlowListView" version="2.0.9" targetFramework="portable45-net45+win8+wpa81" />
   <package id="FormsToolkit" version="1.1.18" targetFramework="portable45-net45+win8+wpa81" />
   <package id="PCLStorage" version="1.0.2" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Plugin.AudioRecorder" version="0.8.0" targetFramework="portable45-net45+win8+wpa81" />
