--- a/Droid/VoicePay.Droid.csproj
+++ b/Droid/VoicePay.Droid.csproj
@@ -162,6 +162,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MainApplication.cs" />
     <Compile Include="Services\BeepPlayerImpl.cs" />
+    <Compile Include="Renderers\FramedEntryRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -186,11 +187,13 @@
     <AndroidResource Include="Resources\drawable\phone.png" />
     <AndroidResource Include="Resources\drawable\tablet.png" />
     <AndroidResource Include="Resources\drawable\adapter.png" />
+    <AndroidResource Include="Resources\drawable\rounded_corners.xml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\" />
     <Folder Include="Resources\drawable-xxxhdpi\" />
     <Folder Include="Resources\drawable-mdpi\" />
+    <Folder Include="Renderers\" />
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\loading.json" />
